crates/hird-parse/tests/snapshots/smoke__use_alias.snap
---
source: crates/hird-parse/tests/smoke.rs
assertion_line: 88
expression: "render_cst(\"use Foo::Bar as B\")"
---
SOURCE_FILE
  USE_DECL
    USE_KW "use"
    PATH
      WHITESPACE " "
      IDENT "Foo"
      COLON_COLON "::"
      IDENT "Bar"
    WHITESPACE " "
    IDENT "as"
    WHITESPACE " "
    IDENT "B"
