crates/hird-parse/tests/snapshots/smoke__use_path.snap
---
source: crates/hird-parse/tests/smoke.rs
assertion_line: 83
expression: "render_cst(\"use Foo.Bar.Baz\")"
---
SOURCE_FILE
  USE_DECL
    USE_KW "use"
    PATH
      WHITESPACE " "
      IDENT "Foo"
      DOT "."
      IDENT "Bar"
      DOT "."
      IDENT "Baz"
