crates/hird-parse/tests/snapshots/smoke__use_selective_empty_is_error.snap
---
source: crates/hird-parse/tests/smoke.rs
assertion_line: 104
expression: "render_cst(\"use Ets.{}\")"
---
SOURCE_FILE
  USE_DECL
    USE_KW "use"
    PATH
      WHITESPACE " "
      IDENT "Ets"
    USE_GROUP
      DOT "."
      L_BRACE "{"
      R_BRACE "}"
---
P0002 9..10: selective import group is empty
