crates/hird-parse/tests/snapshots/smoke__whitespace_only.snap
---
source: crates/hird-parse/tests/smoke.rs
assertion_line: 64
expression: "render_cst(\"  \\n  \")"
---
SOURCE_FILE
  WHITESPACE "  \n  "
